--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
                   class="elementor-element elementor-element-5db0891 elementor-widget__width-initial register-text elementor-widget elementor-widget-text-editor"
                   data-id="5db0891" data-element_type="widget" data-widget_type="text-editor.default">
                   <div class="elementor-widget-container">
-                    About
+                    About Us
                   </div>
                 </div>
               </div>
@@ -1805,6 +1805,110 @@
   <!-- #171717 -->
 
   <div data-elementor-type="wp-page" data-elementor-id="16" class="elementor elementor-16">
+
+    <!-- upcoming event section starts  -->
+
+    <div class="elementor-element elementor-element-7cc6bea e-con-full e-flex e-con e-parent" data-id="7cc6bea"
+      data-element_type="container">
+      <div class="elementor-element elementor-element-10830b6 e-flex e-con-boxed e-con e-child" data-id="10830b6"
+        data-element_type="container">
+        <div class="e-con-inner">
+          <div class="elementor-element elementor-element-993cf23 e-con-full e-flex e-con e-child" data-id="993cf23"
+            data-element_type="container">
+            <div
+              class="elementor-element elementor-element-b87314e elementor-widget-mobile__width-inherit animated-slow elementor-widget elementor-widget-image"
+              data-id="b87314e" data-element_type="widget" data-settings='{"_animation":"none"}'
+              data-widget_type="image.default">
+              <div class="elementor-widget-container">
+                <img decoding="async" width="1496" height="1496" src="./assets/images/upcoming.jpeg"
+                  class="attachment-full size-full wp-image-3833" alt=""
+                  data-lazy-srcset="./assets/images/upcoming.jpeg" data-lazy-sizes="(max-width: 1496px) 100vw, 1496px"
+                  data-lazy-src="./assets/images/upcoming.jpeg" /><noscript><img loading="lazy" decoding="async"
+                    width="1496" height="1496" src="./assets/images/upcoming.jpeg"
+                    class="attachment-full size-full wp-image-3833" alt="" srcset="./assets/images/upcoming.jpeg"
+                    sizes="(max-width: 1496px) 100vw, 1496px" /></noscript>
+              </div>
+            </div>
+          </div>
+          <div class="elementor-element elementor-element-c16c1e0 e-con-full e-flex e-con e-child" data-id="c16c1e0"
+            data-element_type="container">
+            <div class="elementor-element elementor-element-3c4ba5c e-con-full animated-slow e-flex e-con e-child"
+              data-id="3c4ba5c" data-element_type="container" data-settings='{"animation":"none"}'>
+              <div class="elementor-element elementor-element-4e94e72 elementor-widget elementor-widget-heading"
+                data-id="4e94e72" data-element_type="widget" data-widget_type="heading.default">
+                <div class="elementor-widget-container">
+                  <h2 class="elementor-heading-title elementor-size-default">
+                    GTA Eid Festival 2025
+                  </h2>
+                </div>
+              </div>
+              <div
+                class="elementor-element elementor-element-5db0891 elementor-widget__width-initial register-text elementor-widget elementor-widget-text-editor"
+                data-id="5db0891" data-element_type="widget" data-widget_type="text-editor.default">
+                <div class="elementor-widget-container">
+                  Celebrate Eid with us
+                </div>
+              </div>
+            </div>
+            <div class="elementor-element elementor-element-afbe7a9 e-con-full e-flex e-con e-child" data-id="afbe7a9"
+              data-element_type="container">
+              <div class="elementor-element elementor-element-7556401 e-con-full animated-slow e-flex e-con e-child"
+                data-id="7556401" data-element_type="container" data-settings='{"animation":"none"}'>
+                <div class="elementor-element elementor-element-1b42aca elementor-widget elementor-widget-text-editor"
+                  data-id="1b42aca" data-element_type="widget" data-widget_type="text-editor.default">
+                  <div style="text-align: justify;" class="elementor-widget-container">
+                    Join the community at <b>Capitol Convention Centre</b> for two exciting weekends full of fun,
+                    shopping,
+                    food, and festivities.
+                  </div>
+                </div>
+                <div class="elementor-element elementor-element-1b42aca elementor-widget elementor-widget-text-editor"
+                  data-id="1b42aca" data-element_type="widget" data-widget_type="text-editor.default">
+                  <div style="text-align: start;" class="elementor-widget-container">
+                    <br>
+                    📍 <b>Venue:</b> 6435 Dixie Road <br><br>
+                    📅 <b>Dates:</b> <br>
+                    ⭐ Starlight Hall: May 31st – June 1st <br>
+                    🌺 Scarlet Hall: June 4th – 5th <br><br>
+                    Book your stall or sponsorship today and be a part of something special! <br>
+                    📞 <b>Organizer:</b> Saira Faisal – 647-540-4488 <br>
+                    📧 asianwomenteam@gmail.com <br>
+                    👥 <b>Organized by:</b> Asian Women Marketing (AWM) <br>
+                  </div>
+                </div>
+
+                <div
+                  class="elementor-element elementor-element-5e12828 elementor-mobile-align-center animated-slow elementor-widget elementor-widget-button"
+                  data-id="5e12828" data-element_type="widget" data-settings='{"_animation":"none"}'
+                  data-widget_type="button.default">
+                  <div class="elementor-widget-container">
+                    <div class="elementor-button-wrapper">
+                      <a class="elementor-button elementor-button-link elementor-size-sm" href="#event-ticket">
+                        <span class="elementor-button-content-wrapper">
+                          <span class="elementor-button-text">Book Your Ticket Now</span>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- upcoming event section ends -->
+
+
+    <!-- <div class="elementor-element elementor-element-f0c66bd e-flex e-con-boxed e-con e-parent" data-id="f0c66bd"
+      data-element_type="container" id="features">
+      <div class="e-con-inner"></div>
+    </div> -->
+
+
+
     <div class="elementor-element elementor-element-deb7bd7 animated-slow e-flex e-con-boxed e-con e-parent"
       data-id="deb7bd7" data-element_type="container" id="event-ticket" data-settings='{"animation":"none"}'>
       <div class="e-con-inner">
@@ -1823,7 +1927,7 @@
                           <label for="checkbox1" class="ticket_form_checkbox">
                             <input type="checkbox" name="event_date[]" value="2025-02-15" id="checkbox1" />
                             <p class="ticket-17date">
-                              31st May 2025
+                              31st May - 1st June 2025
                               <!-- <br /> -->
                               <!-- 12pm - 10pm -->
                             </p>
@@ -1831,7 +1935,7 @@
                           <label for="checkbox2" class="ticket_form_checkbox">
                             <input type="checkbox" name="event_date[]" value="2025-02-28" id="checkbox2" />
                             <p class="ticket-18date">
-                              1st June 2025
+                              4th June - 5th June 2025
                               <!-- <br /> -->
                               <!-- 12pm - 10pm -->
                             </p>
@@ -1913,7 +2017,7 @@
                         }
 
                         // 📌 Yahan apni desired date-time set karo
-                        startCountdown("June 01, 2025 12:00:00");
+                        startCountdown("May 31, 2025 12:00:00 am");
                       </script>
                       <!--  -->
                       <!--  -->
