--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
       }
     }
   </script>
+  <link rel="stylesheet" href="./styles/banner.css">
   <script>
     class RocketLazyLoadScripts {
       constructor() {
@@ -1277,7 +1278,7 @@
                 data-id="8df03d0" data-element_type="widget" data-widget_type="heading.default">
                 <div class="elementor-widget-container">
                   <h2 class="elementor-heading-title elementor-size-default">
-                    Contact
+                    Contact Us
                   </h2>
                 </div>
               </div>
@@ -1439,6 +1440,9 @@
               </div>
             </div>
           </div> -->
+
+
+
           <div class="elementor-element elementor-element-d601fc4 e-flex e-con-boxed e-con e-parent" data-id="d601fc4"
             data-element_type="container">
             <div class="e-con-inner">
@@ -1620,6 +1624,9 @@
               </div>
             </div>
           </div>
+
+          <img src="./assets/images/banner.jpeg" class="banner" width="100%" alt="">
+          <br><br>
 
           <!-- <div class="elementor-element elementor-element-7607697 e-con-full e-flex e-con e-parent" data-id="7607697"
             data-element_type="container">
