--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="./js/1.js"></script>
   <script src="./js/2.js"></script>
 
+  <link rel="stylesheet" href="./styles/banner.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="profile" href="http://gmpg.org/xfn/11" />
   <link rel="pingback" href="https://gtafestival.ca/xmlrpc.php" />
@@ -1165,6 +1167,9 @@
           </div>
         </div>
       </div>
+      <br>
+      <img src="./assets/images/banner.jpeg" class="banner" width="100%" alt="">
+
       <div class="elementor-element elementor-element-f0c66bd e-flex e-con-boxed e-con e-parent" data-id="f0c66bd"
         data-element_type="container" id="features">
         <div class="e-con-inner"></div>
