--- a/vendor.html
+++ b/vendor.html
@@ -7,6 +7,8 @@
 	<script src="./js/1.js"></script>
 	<script src="./js/2.js"></script>
 
+	<link rel="stylesheet" href="./styles/banner.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="profile" href="http://gmpg.org/xfn/11" />
 	<link rel="pingback" href="https://gtafestival.ca/xmlrpc.php" />
@@ -2708,6 +2710,12 @@
 					</div>
 				</div>
 			</div>
+			<br>
+			<br>
+			<img src="./assets/images/banner.jpeg" class="banner" width="100%" alt="">
+			<br>
+			<br>
+
 			<div class="elementor-element elementor-element-ca6ff42 e-con-full animated-slow e-flex e-con e-parent"
 				data-id="ca6ff42" data-element_type="container"
 				data-settings="{&quot;animation&quot;:&quot;none&quot;}">
